Fix signature pad overflow

--- a/css/form-builder.css.scss
+++ b/css/form-builder.css.scss
@@ -359,6 +359,7 @@
     border: 1px solid #e8e8e8;
     background-color: #fff;
     border-radius: 4px;
+    position: relative;
 
     canvas {
       position: absolute;
